[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "support-ticket-resolver-openenv"
version = "0.1.0"
description = "Customer Support Ticket Triage environment for the OpenEnv 0.1 spec"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
serve = "server:main"