[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "support-ticket-resolver-openenv"
version = "0.2.0"
description = "Customer Support Ticket Triage environment for the OpenEnv 0.1 spec"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "pydantic>=2.6,<3",
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.29,<1",
    "openai >=2.7.2",
    "pyyaml>=6.0,<7",
    "httpx>=0.27,<1",
    "openenv-core>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
server = "server.server:app"